--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>goit-js-hw-10</title>
+  <title>goit-js-hw-11</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap"
@@ -15,23 +15,20 @@
 </head>
 
 <body>
-  <h1>HOME PAGE</h1>
-  <ul class="navigation">
-    <li><a href="./1-timer.html">Timer</a></li>
-    <li><a href="./2-snackbar.html">Snackbar</a></li>
-  </ul>
+  <!-- <h1>HOME PAGE</h1> -->
+
 
   <main>
-    <h2 class="title">Домашнє завдання №10</h2>
+    <h2 class="title">Домашнє завдання №11</h2>
 
 
-    <div class="container container-img">
+    <!-- <div class="container container-img">
       <img class="title-img" src="./img/image.jpg" alt="memory" height="500" width="500">
-    </div>
+    </div> -->
   </main>
 
 
-
+  <script src="./main.js"></script>
 </body>
 
 </html>
