fixed - span and +

--- a/src/index.html
+++ b/src/index.html
@@ -24,10 +24,13 @@
         <!-- прибрав - required -->
       </label>
       <button class="form-btn" type="submit">Search</button>
-      <div class="loader hidden">
-        <p>Завантаження</p>
-        <!-- <span class="loader"></span> -->
-      </div>
+      <!-- <div class="hidden">
+        <p>Завантаження ... </p>
+        <span class="loader">
+
+        </span>
+      </div> -->
+      <span class="loader hidden"></span>
     </form>
 
     <div class="container">
